--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,6 +1,8 @@
 canvas {
   width: 100%;
   height: 100%;
+  z-index: 1;
+  visibility: visible;
 }
 
 
@@ -23,4 +25,18 @@ body {
 
 .info a {
   color: #00ffff;
+}
+
+#dreamDiv {
+  z-index: 2000;
+}
+
+
+
+
+
+
+.modal-body {
+    max-height: calc(100vh - 210px);
+    overflow-y: auto;
 }
