--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,4 +1,4 @@
-canvas {
+  canvas {
   width: 100%;
   height: 100%;
   z-index: 1;
@@ -27,6 +27,19 @@ a {
   /*line-height: 20px;*/
 }
 
+#controls {
+    display: block;
+    padding: 10px 15px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+
+    /*position: absolute;*/
+    /*width: 100%;*/
+    /*left: 0;*/
+    /*text-align: center;*/
+    /*margin: auto;*/
+}
+
 
 .navbar {
   /*font-family: Monospace;*/
@@ -41,6 +54,8 @@ a {
 .navbar-nav>li {
   display: none;
 }
+
+
 
 .navbar-inverse .navbar-nav >li>a:hover {
     color: #777;
@@ -93,17 +108,17 @@ a {
     clear:both;
     padding:14px;
 }
-#login-dp .social-buttons{
+/*#login-dp .social-buttons{
     margin:12px 0
 }
 #login-dp .social-buttons a{
     width: 49%;
-}
+}*/
 #login-dp .form-group {
     margin-bottom: 10px;
 }
 
-.btn-fb{
+/*.btn-fb{
     color: #fff;
     background-color:#3b5998;
     margin-bottom: 1.5%;
@@ -138,7 +153,7 @@ a {
 .btn-gh:hover{
     color: #fff;
     background-color:#6DEFEA;
-}
+}*/
 @media(max-width:768px){
     #login-dp{
         background-color: inherit;
