--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -36,13 +36,13 @@ a {
   text-decoration: none;
 }
 
-.navbar-nav>li {
-  display: none;
+.navbar-inverse .navbar-nav >li>a:hover {
+  color: #777;
+  background-color: transparent;
 }
 
-.navbar-inverse .navbar-nav >li>a:hover {
-    color: #777;
-    background-color: transparent;
+#log-out-tab, #my-dreams-tab {
+  display: none;
 }
 
 .modal-content {
