--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -98,6 +98,13 @@ a {
   }
 }
 
+#login-form-error {
+  display: none;
+  color: red;
+  margin-bottom: 10px;
+  margin-left: 2px;
+}
+
 /* dream-entry-modal */
 
 #dream-entry-modal-body {
