--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -98,10 +98,11 @@ a {
   }
 }
 
-#login-form-error {
+.form-error {
   display: none;
+  font-size: 12px;
   color: red;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   margin-left: 2px;
 }
 
